sdk/v0.47/build/modules.mdx
---
noindex: true
canonical: 'https://docs.cosmos.network/sdk/latest/'
title: "Module Summary"
description: "Version: v0.47"
---

Here are some production-grade modules that can be used in Cosmos SDK applications, along with their respective documentation:

* [Auth](/sdk/v0.47/build/modules/auth/auth) - Authentication of accounts and transactions for Cosmos SDK applications.
* [Authz](/sdk/v0.47/build/modules/authz/README) - Authorization for accounts to perform actions on behalf of other accounts.
* [Bank](/sdk/v0.47/build/modules/bank/README) - Token transfer functionalities.
* [Crisis](/sdk/v0.47/build/modules/crisis/README) - Halting the blockchain under certain circumstances (e.g. if an invariant is broken).
* [Distribution](/sdk/v0.47/build/modules/distribution/README) - Fee distribution, and staking token provision distribution.
* [Evidence](/sdk/v0.47/build/modules/evidence/README) - Evidence handling for double signing, misbehaviour, etc.
* [Feegrant](/sdk/v0.47/build/modules/feegrant/README) - Grant fee allowances for executing transactions.
* [Governance](/sdk/v0.47/build/modules/gov/README) - On-chain proposals and voting.
* [Mint](/sdk/v0.47/build/modules/mint/README) - Creation of new units of staking token.
* [Params](/sdk/v0.47/build/modules/params/README) - Globally available parameter store.
* [Slashing](/sdk/v0.47/build/modules/slashing/README) - Validator punishment mechanisms.
* [Staking](/sdk/v0.47/build/modules/staking/README) - Proof-of-Stake layer for public blockchains.
* [Upgrade](/sdk/v0.47/build/modules/upgrade/README) - Software upgrades handling and coordination.
* [NFT](/sdk/v0.47/build/modules/nft/README) - NFT module implemented based on [ADR43](/sdk/v0.53/build/architecture/adr-043-nft-module).
* [Consensus](/sdk/v0.47/build/modules/consensus/README) - Consensus module for modifying CometBFT's ABCI consensus params.
* [Circuit](/sdk/v0.47/build/modules/circuit/README) - Circuit breaker module for pausing messages.
* [Genutil](/sdk/v0.47/build/modules/genutil/README) - Genesis utilities for the Cosmos SDK.

To learn more about the process of building modules, visit the [building modules reference documentation](/sdk/v0.53/build/building-modules/intro).

## IBC[​](#ibc "Direct link to IBC")

The IBC module for the SDK is maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go).

Additionally, the [capability module](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability) is from v0.48+ maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability).

## CosmWasm[​](#cosmwasm "Direct link to CosmWasm")

The CosmWasm module enables smart contracts, learn more by going to their [documentation site](https://book.cosmwasm.com/), or visit [the repository](https://github.com/CosmWasm/cosmwasm).

## EVM[​](#evm "Direct link to EVM")

Read more about writing smart contracts with solidity at the official [`evm` documentation page](/evm/v0.5.0/documentation/overview).
