sdk/v0.50/build/modules.mdx
---
noindex: true
canonical: 'https://docs.cosmos.network/sdk/latest/'
title: "List of Modules"
description: "Version: v0.50"
---

Here are some production-grade modules that can be used in Cosmos SDK applications, along with their respective documentation:

## Essential Modules[​](#essential-modules "Direct link to Essential Modules")

Essential modules include functionality that *must* be included in your Cosmos SDK blockchain. These modules provide the core behaviors that are needed for users and operators such as balance tracking, proof-of-stake capabilities and governance.

* [Auth](/sdk/v0.50/build/modules/auth/auth) - Authentication of accounts and transactions for Cosmos SDK applications.
* [Bank](/sdk/v0.50/build/modules/bank/README) - Token transfer functionalities.
* [Circuit](/sdk/v0.50/build/modules/circuit/README) - Circuit breaker module for pausing messages.
* [Consensus](/sdk/v0.50/build/modules/consensus/README) - Consensus module for modifying CometBFT's ABCI consensus params.
* [Distribution](/sdk/v0.50/build/modules/distribution/README) - Fee distribution, and staking token provision distribution.
* [Evidence](/sdk/v0.50/build/modules/evidence/README) - Evidence handling for double signing, misbehaviour, etc.
* [Governance](/sdk/v0.50/build/modules/gov/README) - On-chain proposals and voting.
* [Genutil](/sdk/v0.50/build/modules/genutil/README) - Genesis utilities for the Cosmos SDK.
* [Mint](/sdk/v0.50/build/modules/mint/README) - Creation of new units of staking token.
* [Slashing](/sdk/v0.50/build/modules/slashing/README) - Validator punishment mechanisms.
* [Staking](/sdk/v0.50/build/modules/staking/README) - Proof-of-Stake layer for public blockchains.
* [Upgrade](/sdk/v0.50/build/modules/upgrade/README) - Software upgrades handling and coordination.

## Supplementary Modules

Supplementary modules are modules that are maintained in the Cosmos SDK but are not necessary for
the core functionality of your blockchain.  They can be thought of as ways to extend the
capabilities of your blockchain or further specialize it.

* [Authz](/sdk/v0.50/build/modules/authz/README) - Authorization for accounts to perform actions on behalf of other accounts.
* [Epochs](/sdk/v0.50/build/modules/epochs/README) - Registration so SDK modules can have logic to be executed at the timed tickers.
* [Feegrant](/sdk/v0.50/build/modules/feegrant/README) - Grant fee allowances for executing transactions.
* [Group](/sdk/v0.50/build/modules/group/README) - Allows for the creation and management of on-chain multisig accounts.
* [NFT](/sdk/v0.50/build/modules/nft/README) - NFT module implemented based on [ADR43](/sdk/v0.53/build/architecture/adr-043-nft-module).
* [ProtocolPool](/sdk/v0.50/build/modules/protocolpool/README) - Extended management of community pool functionality.

## Deprecated Modules

The following modules are deprecated.  They will no longer be maintained and eventually will be removed
in an upcoming release of the Cosmos SDK per our [release process](https://github.com/cosmos/cosmos-sdk/blob/release/v0.50.x/RELEASE_PROCESS.md).

* [Crisis](/sdk/v0.50/build/modules/crisis/README) - *Deprecated* halting the blockchain under certain circumstances (e.g. if an invariant is broken).
* [Params](/sdk/v0.50/build/modules/params/README) - *Deprecated* Globally available parameter store.

To learn more about the process of building modules, visit the [building modules reference documentation](/sdk/v0.53/build/building-modules/intro).

## IBC

The IBC module for the SDK is maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go).

Additionally, the [capability module](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability) is from v0.50+ maintained by the IBC Go team in its [own repository](https://github.com/cosmos/ibc-go/tree/fdd664698d79864f1e00e147f9879e58497b5ef1/modules/capability).

## CosmWasm

The CosmWasm module enables smart contracts, learn more by going to their [documentation site](https://book.cosmwasm.com/), or visit [the repository](https://github.com/CosmWasm/cosmwasm).

## EVM

Read more about writing smart contracts with solidity at the official [`evm` documentation page](https://evm.cosmos.network/).
